--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lenis": "^1.3.15",
     "lucide-react": "^0.548.0",
     "next": "^15.5.7",
+    "next-auth": "^4.24.13",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "swiper": "^12.0.3"
@@ -23,6 +24,7 @@
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4",
+    "prisma": "^7.1.0",
     "tailwindcss": "^4"
   }
 }
