--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
-    "@vercel/analytics": "^1.5.0",
+    "@vercel/analytaics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "lenis": "^1.3.15",
     "lucide-react": "^0.548.0",
@@ -23,9 +23,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
+    "@prisma/client": "^7.2.0",
     "@tailwindcss/postcss": "^4",
     "dotenv": "^17.2.3",
-    "prisma": "^7.1.0",
+    "prisma": "^7.2.0",
     "tailwindcss": "^4"
   }
 }
