--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.10",
-    "@vercel/analytaics": "^1.5.0",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "lenis": "^1.3.15",
     "lucide-react": "^0.548.0",
